# gitrCLI

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
src/: find.py  list.py  main.py  main.rs
src/utils/: auth.py
