[package]
name = "gitr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"]}
tokio = { version = "1.14.0", features = ["full"] }
structopt = "0.3.25"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
hyper = "0.14.15"