[tool.poetry]
name = "gitr"
version = "0.1.0"
description = "A small utility tool for finding and cloning your GitHub repos."
authors = ["Jordan Lowell <me@jordanlowell.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.scripts]
gitr = "gitr.main:app"

[tool.poetry.dependencies]
python = ">=3.9.5,<4"
typer = {extras = ["all"], version = ">=0.6.1"}
requests = {version = "^2.28.1"}
python-dotenv = { version = "^0.20.0" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"